kustomize/longhorn/overlays/prod/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn 
spec:
  entryPoints:
  - web 
  routes:
  - match: Host(`longhorn.tpi2.local`)
    kind: Rule
    services:
    - name: longhorn-frontend 
      namespace: longhorn
      kind: Service
      port: 80
